Vertex system changes